--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "backbone": "^1.2.3",
     "bootstrap": "^3.3.5",
+    "filepicker-js": "^2.1.3",
     "jquery": "^2.1.4",
     "react": "^0.14.0",
     "react-dom": "^0.14.0"
